fix: ui clicking
Fixes toasts being too high up to click and preview cards being closed when clicking the list editor or favourite buttons.

--- a/common/css.css
+++ b/common/css.css
@@ -187,6 +187,7 @@ a[href]:active, button:not([disabled]):active, fieldset:not([disabled]):active, 
 }
 
 [data-sonner-toaster][data-theme='dark'] {
+  top: 5rem !important;
   --normal-bg: var(--dark-color) !important;
   --normal-border: none !important;
   --normal-text: var(--dm-base-text-color) !important;
